--- a/.github/workflows/azure-static-web-apps-from-wiki.yml
+++ b/.github/workflows/azure-static-web-apps-from-wiki.yml
@@ -59,17 +59,15 @@ jobs:
         run: echo "TODO: implement writing of config"
       - name: deploy to static web app
         run: echo "TODO: implement deploy to static web app"
-        
-      
-#      - name: Build And Deploy
-#        id: builddeploy
-#        uses: Azure/static-web-apps-deploy@v1
-#        with:
-#          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-#          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for GitHub integrations (i.e. PR comments)
-#          action: "upload"
-#          ###### Repository/Build Configurations ######
-#          app_location: "src" # App source code path relative to repository root
-#          api_location: "api" # Api source code path relative to repository root - optional
-#          output_location: "public" # Built app content directory, relative to app_location - optional
-#          ###### End of Repository/Build Configurations ######
+      - name: Build And Deploy
+        id: builddeploy
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for GitHub integrations (i.e. PR comments)
+          action: "upload"
+          ###### Repository/Build Configurations ######
+          app_location: "site" # App source code path relative to repository root
+          skip_app_build: true
+          skip_api_build: true
+          ###### End of Repository/Build Configurations ######
