--- a/.github/workflows/azure-static-web-apps-from-wiki.yml
+++ b/.github/workflows/azure-static-web-apps-from-wiki.yml
@@ -13,31 +13,41 @@ jobs:
         with:
           repository: ${{github.repository}}.wiki
           path: 'docs'
-      - name: install mkdocs and plugins
+      - name: configureing prerequisites
         run:  |
           pip install mkdocs mkdocs-exclude
       - name: parse file tags
         run: |
+          # find config file
+          for file in $(find ./docs/ -name "*.md")
+          do
+            # check if file has config tag
+            if [ "$(sed -n -e '1{/<\!-- hasConfig -->/p}' "$file")" ]; then
+              configfile=$file
+            fi
+          done
+
+          if [ "$configfile" ]; then
+            echo "CONFIG_SOURCE_FILE=$configfile" >> $GITHUB_ENV
+            echo "::notice ::Config read from wiki page $configfile"
+          else
+            echo '::error ::no file found with tag <\!-- hasConfig -->  on first line. add config codeblocks and tag.'
+            exit 1
+          fi
+
+
           excludeFromPublish=''
           for file in $(find ./docs/ -name "*.md")
           do
             wikiFilePath=$(realpath --relative-to ./docs "$file")
 
-            # check if file has config tag
-            if [ "$(sed -n -e '1{/<\!-- hasConfig -->/p}' "$file")" ]; then
-              echo "::notice:: found tag <\!-- hasConfig --> on wiki file $wikiFilePath"
-              configfile=$file
-            fi
-
             #check if file has do not publish tag
             if [ "$(sed -n -e '1{/<\!-- doNotPublish -->/p}' "$file")" ]; then
-              echo "::notice:: found tag <\!-- doNotPublish --> on wiki file $wikiFilePath" 
               excludeFromPublish="$excludeFromPublish:$wikiFilePath"
             fi
           done  
-
+          echo "::notice ::Pages excluded from publishing: [${excludeFromPublish:1}]"
           echo "EXCLUDE_GLOBS=${excludeFromPublish:1}" >> $GITHUB_ENV
-          echo "CONFIG_SOURCE_FILE=$configfile" >> $GITHUB_ENV
       - name: build mkdocs config
         env:
           BASE_CONFIG_FILE: base.yml
@@ -45,8 +55,12 @@ jobs:
           REPO_URL: https://github.com/${{github.repository}}/wiki
         run: |
           # read config from config source file in wiki
-          sed -n '/^```mkdocs.yml/,/^```/p' "$CONFIG_SOURCE_FILE" |
-          sed '/^```/d' > "$BASE_CONFIG_FILE"
+          config=$(sed -n '/^```mkdocs.yml$/,/^```$/p' "$CONFIG_SOURCE_FILE")
+          if [ ! "$config" ]; then
+            echo "::error ::no codeblock found marked with 'mkdocs.yml' in file '$CONFIG_SOURCE_FILE'."
+            exit 1
+          fi
+          echo "$config" | sed '/^```/d' > "$BASE_CONFIG_FILE"
 
           # build extended mkdocs config for publishing
           echo ''                             >  "$CONFIG_FILE"
@@ -67,6 +81,8 @@ jobs:
           done
       - name: add page title to content
         run: |
+          # foreach file parse the title and include in frontmatter as title.
+          # for more information on title parsing: https://www.mkdocs.org/user-guide/writing-your-docs/#meta-data 
           for file in $(find ./docs/ -name '*.md')
           do
             filename=$(basename -- "$file")
@@ -77,20 +93,27 @@ jobs:
           done
       - name: rename homepage to index.md
         run:  |
-          homepage=$(sed -n '/^```homepage/,/^```/p' "$CONFIG_SOURCE_FILE" | sed '/^```/d')
+          # find homepage codeblock in config source file
+          homepage=$(sed -n '/^```homepage$/,/^```$/p' "$CONFIG_SOURCE_FILE" | sed '/^```/d')
+          if [ ! "$homepage" ]; then
+            echo "::error ::no codeblock found marked with `homepage` in file `$CONFIG_SOURCE_FILE`."
+            exit 1
+          else
+            echo "::notice ::Homepage created from $homepage"
+          fi
+
           if [[ ! -f ./docs/index.md ]]; then 
             find ./docs/ -maxdepth 1 -iname "$homepage" -exec mv {} ./docs/index.md \;
           fi
       - name: replace links to homepage with index.md
         run: |
-          homepage=$(sed -n '/^```homepage/,/^```/p' "$CONFIG_SOURCE_FILE" | sed '/^```/d')
-          regex="${homepage//\//\\\/}"
-          regex="${regex//\./\\\.}"
+          homepage=$(sed -n '/^```homepage$/,/^```$/p' "$CONFIG_SOURCE_FILE" | sed '/^```/d')
+          homepagelink="${homepage%.*}"
           
           for file in $(find ./docs/ -name '*.md')
           do
-             # replace '[linkname](homepagefile)' with '[linkname](index.md)'
-             sed -i "s/]($regex)/](index.md)/g" $file
+             # replace '[linkname](homepagefile)' with '[linkname](index)'
+             sed -i "s/]($homepagelink)/](index)/g" $file
           done
       - name: build site
         run: mkdocs build
