get static app config from wiki

--- a/.github/workflows/azure-static-web-apps-from-wiki.yml
+++ b/.github/workflows/azure-static-web-apps-from-wiki.yml
@@ -117,54 +117,17 @@ jobs:
           done
       - name: build site
         run: mkdocs build
-      - name: write statice web app config
-        uses: DamianReeves/write-file-action@master
-        with:
-          write-mode: overwrite
-          path: site/staticwebapp.config.json
-          contents: |
-            {
-              "auth": {
-                "identityProviders": {
-                  "azureActiveDirectory": {
-                    "registration": {
-                      "openIdIssuer": "https://login.microsoftonline.com/${{ secrets.AZUREAD_TENANT_ID }}",
-                      "clientIdSettingName": "AZUREAD_CLIENT_ID",
-                      "clientSecretSettingName": "AZUREAD_CLIENT_SECRET"
-                    }
-                  }
-                }
-              },
-              "responseOverrides": {
-                "401": {
-                  "statusCode": 302,
-                  "redirect": "/login"
-                },
-                "404": {
-                  "rewrite": "/",
-                  "statusCode": 404
-                }
-              },
-              "routes":[
-                {
-                  "route": "/login",
-                  "allowedRoles": ["anonymous"],
-                  "rewrite": "/.auth/login/github"
-                },    
-                {
-                  "route": "/.auth/*",
-                  "allowedRoles": ["anonymous"]
-                },
-                {
-                  "route": "/logout",
-                  "redirect": "/.auth/logout"
-                },
-                {
-                  "route": "/*",
-                  "allowedRoles": ["authenticated"]
-                }
-              ]
-            }
+      - name: build static web app config
+        env:
+          STATIC_CONFIG_FILE: site/staticwebapp.config.json
+        run: |
+          # read config from config source file in wiki
+          staticapp_config=$(sed -n '/^```staticwebapp.config.json$/,/^```$/p' "$CONFIG_SOURCE_FILE")
+          if [ ! "$staticapp_config" ]; then
+            echo "::error ::no codeblock found marked with 'staticwebapp.config.json' in file '$CONFIG_SOURCE_FILE'."
+            exit 1
+          fi
+          echo "$staticapp_config" | sed '/^```/d' > "$STATIC_CONFIG_FILE"
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
